Refine end-to-end mission layout and clarify key exchange

--- a/criptografia-ponta-a-ponta.html
+++ b/criptografia-ponta-a-ponta.html
@@ -105,6 +105,16 @@
                     </article>
                 </div>
                 <p class="mission-detail">Criptografia ponta a ponta significa que apenas os dispositivos dos participantes têm as chaves. Quem estiver no meio do caminho continua sem acesso ao conteúdo.</p>
+                <section class="end2end-faq" aria-labelledby="faqChavesTitulo">
+                    <h2 id="faqChavesTitulo">Como o contato recebe a chave certa?</h2>
+                    <p>Quando a conversa começa, o aplicativo gera um par de chaves dentro de cada celular: uma pública (que pode circular) e uma privada (que nunca sai do aparelho).</p>
+                    <ul>
+                        <li>Seu celular envia <strong>só</strong> a chave pública para o servidor guardar temporariamente e entregar ao contato.</li>
+                        <li>O contato usa essa chave pública para trancar as mensagens dele e recebe automaticamente a chave pública dele para você trancar as suas.</li>
+                        <li>As chaves privadas ficam protegidas no hardware dos dois aparelhos; mesmo interceptando a mensagem ou o servidor, ninguém consegue copiá-las.</li>
+                    </ul>
+                    <p class="end2end-faq-note">Por isso, nem mesmo o WhatsApp consegue desbloquear o conteúdo: apenas os celulares com as chaves privadas conseguem ler a conversa.</p>
+                </section>
             </div>
             <aside class="mission-aside">
                 <h2>Dica rápida</h2>
